chagne db to postgree

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header class="navbar navbar-default" role="navigation" >
-  <a class="navbar-brand" href="/">Read together</a>
+  <a class="navbar-brand" href="/" style="padding: 5px"><%= image_tag("header-text.png", :alt => "rss feed", :class=>"media-object header-text") %></a>
   <div class="navbar-form navbar-left" role="search">
     <div class="form-group">
       <input type="text" class="form-control " placeholder="Search">
