--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -8,3 +8,7 @@ span.delete-btn, span.edit-btn, .read-it-btn
 	margin: 0
 	padding: 5px
 	width: 100%
+.article-body
+	font-size: 13px
+.header-text
+	height: 100%
