--- a/app/views/main/article.html.erb
+++ b/app/views/main/article.html.erb
@@ -14,6 +14,7 @@
 	<%= javascript_include_tag "models/comment.js" %>
 	<%= javascript_include_tag "models/sentence.js" %>
 
+	<%= javascript_include_tag "collections/tags.js" %>
 	<%= javascript_include_tag "collections/comments.js" %>
 	<%= javascript_include_tag "collections/sentences.js" %>
 	<%= javascript_include_tag "models/add_article.js" %>
