--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,7 +7,7 @@
 	<%= javascript_include_tag "views/articles/article_sentences.js" %>
 	<%= javascript_include_tag "views/articles/article.js" %>
 
-
+	<%= javascript_include_tag "collections/tags.js" %>
 	<%= javascript_include_tag "collections/article_sentences.js" %>	
 	<%= javascript_include_tag "collections/articles.js" %>	
 
