edit, delete sentence

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -14,7 +14,10 @@ span.delete-btn, span.edit-btn, .read-it-btn
 	font-size: 13px
 .header-text
 	height: 100%
-
+.slide-sentence-box
+	margin-bottom: 5px
+	padding-top: 5px
+	padding-bottom: 5px
 .label-size
 	margin: 0
 	padding: 0
