--- a/app/assets/stylesheets/sentences.css.sass
+++ b/app/assets/stylesheets/sentences.css.sass
@@ -14,3 +14,7 @@ span.sentence
 span.sentence.active
 	color: #CE1C19
 	font-style: italic
+
+.sentence-content, .sentence-edit-box 
+	font-size: 12px
+	width: 85%	
