--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -64,6 +64,16 @@ span.delete-btn, span.edit-btn, .read-it-btn
 			background: #555
 			&:before
 				border-color: transparent #555 transparent transparent
-
+.waiting-overlay 
+	position: absolute
+	width: 100%
+	height: 100%
+	z-index: 900
+	background-color: #000
+	opacity: 0.4
+	text-align: center
+	border-radius: 4px
+	img
+		height: 90%
 
 
