fix waiting screen

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -64,7 +64,7 @@ span.delete-btn, span.edit-btn, .read-it-btn
 			background: #555
 			&:before
 				border-color: transparent #555 transparent transparent
-.waiting-overlay 
+.waiting-screen 
 	position: absolute
 	width: 100%
 	height: 100%
