--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -76,4 +76,23 @@ span.delete-btn, span.edit-btn, .read-it-btn
 	img
 		height: 90%
 
+.word-content
+	padding-right: 5px
+	font-size: 12px
+	font-weight: bold
+.meaning-content
+	font-size: 12px
+	font-style: italic
+.vocabulary
+	div.panel+.panel
+		margin-top: 2px
+	.panel-heading, .panel-body
+		padding-top: 3px
+		padding-bottom: 3px
+	.well
+		margin-bottom: 5px
+		padding-top: 20px
+		padding-bottom: 5px
+
+
 
