--- a/app/assets/stylesheets/sentences.css.sass
+++ b/app/assets/stylesheets/sentences.css.sass
@@ -18,3 +18,7 @@ span.sentence.active
 .sentence-content, .sentence-edit-box 
 	font-size: 12px
 	width: 85%	
+.sentence-content span
+	cursor: pointer
+	&:hover
+		color: #CC194B
