--- a/app/views/main/article.html.erb
+++ b/app/views/main/article.html.erb
@@ -8,6 +8,8 @@
 	<%= javascript_include_tag "views/comments/add_comment.js" %>
 	<%= javascript_include_tag "views/comments/comment.js" %>
 	<%= javascript_include_tag "views/comments/comments_index.js" %>
+	<%= javascript_include_tag "views/vocabularies/vocabularies_index.js" %>
+	<%= javascript_include_tag "views/vocabularies/vocabulary.js" %>
 
 	<%= javascript_include_tag "views/articles/add_articles_index.js" %>
 
@@ -20,6 +22,7 @@
 	<%= javascript_include_tag "collections/comments.js" %>
 	<%= javascript_include_tag "collections/sentences.js" %>
 	<%= javascript_include_tag "models/add_article.js" %>
+	<%= javascript_include_tag "collections/vocabulary.js" %>
 
 	<%= javascript_include_tag "routers/sentences_router.js" %>
 
@@ -35,6 +38,7 @@
 		<div class="col-md-4 "  >		
 			<div id="slide-sentence"></div>	
 			<div id="comment-body"></div>	
+			<div id="vocabularies"></div>	
 		</div>
 	<div>
 </div>
